# ready-redis

./: .gitignore  README.md  pyproject.toml
src/ready_redis/: __init__.py  docker-compose.yml  ready_redis.py
tests/: test_ready_redis.py
